# manifolds

./: .gitignore  .gitmodules  CMakeLists.txt
docker/: container-start.bash  container-start.bat
examples/: example_01.py  start-env.bash
generation_tests/: CMakeLists.txt
include/Manifolds/: Charts.hpp  Detail.hpp  Interpolator.hpp  Interval.hpp  LinearManifolds.hpp  MGSpline.hpp  Manifold.hpp  ManifoldBase.hpp  Map.hpp  MapBase.hpp  MapBaseComposition.hpp  MapComposition.hpp  PinocchioFK.hpp  Sphere.hpp
include/Manifolds/Algebra/: VectorSpace.hpp
include/Manifolds/Atlases/: LinearManifolds.h  Reals.h  Sphere.h
include/Manifolds/LinearManifolds/: GLPolynomial.hpp  GLPolynomialDetail.hpp  GLPolynomialOperators.hpp  GaussLobattoPolynomial.hpp  LinearManifolds.hpp  LinearMaps.hpp  Multivectors.hpp  PWGLPolynomial.hpp  PWGLPolynomialDetail.hpp  Polynomials.hpp  Reals.hpp
include/Manifolds/Maps/: Charts.hpp  Map.hpp  MapBase.hpp  MapBaseComposition.hpp  MapComposition.hpp
include/Manifolds/Optimizer/: Optimizer.hpp
include/Manifolds/Topology/: Open.hpp
python/bindings/: bindings.cpp  pyManifold.hpp  pyMap.hpp
python/submodules/: __init__.py
python/sym_manifolds/: __init__.py  generator.py  sphere.py
src/: Interpolator.cpp  MGSpline.cpp  MapBase.cpp  MapBaseComposition.cpp  MapComposition.cpp  Sphere.cpp
src/Atlases/: Sphere.cpp
src/collocation/: GaussLobattoPointsWeights.cpp
tests/: CMakeLists.txt  Test.h  charts.cpp  generator.py  interval.cpp  linear_maps.cpp  manifold_test.cpp  manifold_test.py  manifolds.cpp  map.cpp  map_composition.cpp  optimization.cpp  pinocchio.cpp  polynomial.cpp  reals.cpp  robotics.cpp  sphere.cpp  vector.cpp
tests/urdf/: panda.urdf  panda_arm.urdf
